# bank-transaction-agent

./: .env  .gitignore  README.md  agent.py  app.py  data.db  data_retrival.ipynb  eda.ipynb  llm_test.ipynb  main.py  model.py  prompts.py  pyproject.toml  requirements.txt  tool_decorator.py  tool_schema.py  tools.py  tools_sample.py  utils.py  vector_store.py
HTML Report/: Bank Transaction GenAI Application 1f32cdc4b027808482a6fcc0c4ee5c80.html  MoneyLion Bank Transaction GenAI Application 1f32cdc4b027808482a6fcc0c4ee5c80.html
chroma_store/c86b9df4-b872-49f5-9d76-098b2c015362/: index_metadata.pickle
main/: agent.py  app.py  model.py  prompts.py  tool_schema.py  tools.py  utils.py  vector_store.py
notebooks/: data_retrival.html  data_retrival.ipynb  eda.html  eda.ipynb  llm_test.html  llm_test.ipynb
