[project]
name = "bank-transaction-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.8",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "more-itertools>=10.7.0",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
]
